[gd_scene load_steps=5 format=3 uid="uid://doecdotna08mw"]

[ext_resource type="Texture2D" uid="uid://cxij7cnv2y41h" path="res://assets/projectiles/ObsidianDagger.png" id="1_40q1d"]
[ext_resource type="Script" path="res://scripts/shopItems/obsidian_shop.gd" id="1_n4hwn"]
[ext_resource type="FontFile" uid="uid://bv4aoa1310txh" path="res://assets/tilemap/BitPap.ttf" id="2_c5e6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4t5l"]
size = Vector2(48, 44)

[node name="obsidianShop" type="CharacterBody2D"]
script = ExtResource("1_n4hwn")

[node name="ObsidianDagger" type="Sprite2D" parent="."]
rotation = 0.785398
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_40q1d")

[node name="ObsidianDagger2" type="Sprite2D" parent="."]
position = Vector2(-3, -2)
rotation = 0.523599
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_40q1d")

[node name="ObsidianDagger3" type="Sprite2D" parent="."]
position = Vector2(2, 3)
rotation = 1.0472
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_40q1d")

[node name="obsidianBuy" type="Area2D" parent="."]
position = Vector2(-3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="obsidianBuy"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_r4t5l")

[node name="InfoStats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -122.0
offset_top = -48.0
offset_right = 70.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="InfoStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="TextureRect" type="TextureRect" parent="InfoStats/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 96.0
texture = ExtResource("1_40q1d")

[node name="Title" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_c5e6p")
theme_override_font_sizes/font_size = 32
text = "Obsidian Dagger"

[node name="Description" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 24.0
offset_right = 44.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_c5e6p")
theme_override_font_sizes/font_size = 16
text = "+1 Attack"
horizontal_alignment = 1

[node name="Flavor" type="Label" parent="InfoStats/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -35.0
offset_right = 163.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("2_c5e6p")
theme_override_font_sizes/font_size = 16
text = "It shimmers brighter than your own shadow. 
You can feel it giving you confidence."

[node name="Cost" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -80.0
offset_right = 89.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_c5e6p")
theme_override_font_sizes/font_size = 16
text = "Cost: 18 Gold"

[connection signal="body_entered" from="obsidianBuy" to="." method="_on_obsidian_buy_body_entered"]
[connection signal="body_exited" from="obsidianBuy" to="." method="_on_obsidian_buy_body_exited"]
